--- a/RTMP/index.html
+++ b/RTMP/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
@@ -29,9 +29,9 @@
         });
     </script>
 </body>
-</html>
+</html> -->
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
@@ -41,8 +41,8 @@
 <body>
     <h1>HLS 直播串流</h1>
     <video id="videoPlayer" class="video-js vjs-default-skin" controls autoplay width="800" height="450">
-        <source src="http://192.168.0.166:8080/hls/stream.m3u8" type="application/x-mpegURL">
-        <source src="http://localhost:8080/hls/stream.m3u8" type="application/x-mpegURL">
+        <source src="http://192.168.0.108:8001/hls/stream.m3u8" type="application/x-mpegURL">
+        <!-- <source src="http://localhost:8080/hls/stream.m3u8" type="application/x-mpegURL"> -->
     </video>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.14.3/video.min.js"></script>
     <script>
@@ -51,4 +51,4 @@
         });
     </script>
 </body>
-</html> -->
+</html>
