--- a/RTSP/index.html
+++ b/RTSP/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
@@ -7,5 +7,23 @@
 <body>
   <h1>嵌入 MediaMTX 串流</h1>
   <iframe src="http://localhost:8889/mystream/" width="800" height="450" frameborder="0" allowfullscreen></iframe>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+  <meta charset="UTF-8">
+  <title>RTSP 串流嵌入頁面</title>
+</head>
+<body>
+  <h1>嵌入 MediaMTX 串流</h1>
+
+  <h2>Camera 串流</h2>
+  <iframe src="http://192.168.1.108:8889/mystream/" width="800" height="450" frameborder="0" allowfullscreen></iframe>
+
+  <h2>Radar 串流</h2>
+  <iframe src="http://192.168.1.108:8889/radar/" width="800" height="450" frameborder="0" allowfullscreen></iframe>
+
 </body>
 </html>
